--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@vitejs/plugin-vue": "^5.2.4",
     "@vitest/browser": "^3.1.3",
     "@vitest/coverage-v8": "^3.1.3",
+    "@vitest/ui": "^3.1.4",
     "autoprefixer": "^10.4.14",
+    "jsdom": "^26.1.0",
     "playwright": "^1.52.0",
     "postcss": "^8.4.24",
     "storybook": "^8.6.14",
