--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@chromatic-com/storybook": "^3.2.6",
     "@nuxtjs/storybook": "^8.3.3",
     "@nuxtjs/tailwindcss": "^6.14.0",
+    "@playwright/test": "^1.52.0",
     "@storybook/addon-essentials": "^8.6.14",
     "@storybook/addon-links": "^8.6.14",
     "@storybook/blocks": "^8.6.14",
@@ -25,10 +26,12 @@
     "@storybook/test": "^8.6.14",
     "@storybook/vue3": "^8.6.14",
     "@storybook/vue3-vite": "^8.6.14",
+    "@types/node": "^22.15.21",
     "@vitejs/plugin-vue": "^5.2.4",
     "@vitest/browser": "^3.1.3",
     "@vitest/coverage-v8": "^3.1.3",
     "@vitest/ui": "^3.1.4",
+    "@vue/test-utils": "^2.4.0-alpha.2",
     "autoprefixer": "^10.4.14",
     "jsdom": "^26.1.0",
     "playwright": "^1.52.0",
@@ -37,7 +40,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.1.3",
+    "vitest": "^3.1.4",
     "vue": "^3.5.14"
   }
 }
